# action-check-markdown

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  action.yml  main.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/.workflows/: labeler.yaml  test-action.yaml
.github/workflows/: test-action.yaml  zizmor.yaml
